--- a/LearnRoslyn/LearnRoslyn/LearnRoslyn.csproj
+++ b/LearnRoslyn/LearnRoslyn/LearnRoslyn.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CodeFixProvider.cs" />
+    <Compile Include="LocalVariableCamelcaseCodeFix.cs" />
     <Compile Include="LocalVariableCamelcaseNamingAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
